[project]
name = "claw-codex-proxy"
version = "0.1.0"
description = "Local OpenRouter-compatible proxy that uses OpenAI Codex OAuth (ChatGPT subscription)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
claw-codex = "claw_codex.cli:main"

[tool.uvicorn]
factory = false
